--- a/PragimCourses/PragimCourses/Views/Cart/Checkout.cshtml
+++ b/PragimCourses/PragimCourses/Views/Cart/Checkout.cshtml
@@ -8,6 +8,7 @@
 <div class="backdrop">
     <div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
 </div>
+
 <div class="support__title">
     <div class="container">
         <h1>Checkout</h1>
@@ -47,7 +48,7 @@
                                                         <input type="password" name="password" id="password" class="form-control" />
                                                     </div>
                                                     <div class="form-group">
-                                                        <a href="#">Lost Password</a>
+                                                        <a href="@Url.Action("ForgotPassword","Account")">Lost Password</a>
                                                     </div>
                                                     <button type="button" class="btn btn-custom">Login</button>
                                                 </form>
