--- a/PragimCourses/PragimCourses/Views/Shared/_testimonial.cshtml
+++ b/PragimCourses/PragimCourses/Views/Shared/_testimonial.cshtml
@@ -4,7 +4,7 @@
     var count = Math.Floor(Model.ToList().Count / 2m);
 }
 <div class="people__opinion">
-    <h1>What People Say</h1>
+    <h1 data-aos="fade-down" data-aos-duration="800">What People Say</h1>
 
     <div class="container">
         <div id="carousel-example-generic1" class="carousel slide" data-ride="carousel">
