--- a/PragimCourses/PragimCourses/Views/Account/Login.cshtml
+++ b/PragimCourses/PragimCourses/Views/Account/Login.cshtml
@@ -16,9 +16,8 @@
     <div class="row">
         <div class="col-sm-7">
             <h1 class="login_header">Login</h1>
-
             <section class="login" id="loginForm">
-                @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal form-submit", role = "form" }))
                 {
                     @Html.AntiForgeryToken()
                     @Html.ValidationSummary(false,"",new{@class="text-danger"});
@@ -41,20 +40,16 @@
                         </p>
 
                         <p>
-                            @Html.ActionLink("Forgot password?", "ForgotPassword")
+                            @Html.ActionLink("Forgot password?", "ForgotPassword","Account")
                         </p>
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Log in" class="btn btn-default" />
+                        <input  type="submit" value="Log in" class="btn btn-default" />
                     </div>
 
                 }
             </section>
-        </div>
-        <div class="col-sm-5">
-            @* <section id="socialLoginForm"> *@
-            @*     @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl }) *@
-            @* </section> *@
+
         </div>
     </div>
 </div>
